# site_proj

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
auth_service/: Cargo.toml  Dockerfile
auth_service/src/: config.rs  main.rs  routes.rs
bastion/: Dockerfile
bastion/2023-12-16-223623_create_users/: up.sql
file_service/: Cargo.toml  Dockerfile
file_service/migrations/: 20231227042153_create_files.up.sql
file_service/src/: config.rs  (+2 more)
host/: Cargo.toml
node/: .gitignore  Cargo.toml  DatabaseUp.Dockerfile  Dockerfile  config.yaml
node/migrations/: 20231227042147_create_nodes.up.sql  20231227042153_create_files.up.sql
node/migrations/2023-12-16-223623_create_users/: up.sql
node/src/: app_state.rs  config.rs  main.rs  routes.rs
node/src/auth/: hmac.rs  jwt.rs  mod.rs
node/src/auth/web/: response.rs  routes.rs
node/src/axum/extractors/: authenticated_user.rs  file_data_store.rs  mod.rs  node_store.rs  session.rs  user_store.rs
node/src/data_store/: deadpool.rs  files.rs  mod.rs  postgres.rs
node/src/files/: axum.rs  file.rs  mod.rs
node/src/files/store/: disk.rs  error.rs  mod.rs  paired.rs  postgres.rs
node/src/files/web/: request.rs  response.rs  routes.rs
node/src/nodes/: axum.rs  mod.rs  node.rs
node/src/nodes/store/: error.rs  mod.rs  postgres.rs
node/src/nodes/web/: mod.rs  request.rs  response.rs  routes.rs
node/src/startup/: files.rs  mod.rs  postgres.rs
node/src/users/: mod.rs
node/src/users/store/: error.rs  mod.rs  postgres.rs
node/src/users/web/: mod.rs  response.rs  routes.rs
user_service/: Cargo.toml  Dockerfile
web_ui/: Cargo.toml  Dockerfile  assets.go  authentication.go  go.mod  index.go  main.go  render_template.go  users.go
(+76 files in other folders)
