[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
serde = "1.0.193"
serde_json = "1.0.108"
diesel = { version = "2.1.0", features = ["postgres"] }