[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
serde = "1.0.193"
serde_json = "1.0.108"
config = "0.13.4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.1.0" }
r2d2 = "0.8.10"
url = "2.5.0"
log = "0.4.20"
env_logger = "0.10.1"