[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros", "multipart"] }
tokio = { version = "1.35.0", features = ["full"] }
async-trait = "0.1.75"
tower = "0.4.13"
serde = "1.0.193"
serde_json = "1.0.108"
bytes = "1.5.0"
config = "0.13.4"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
deadpool = { version = "0.10.0", features = ["managed"] }
url = "2.5.0"
log = "0.4.20"
env_logger = "0.10.1"
scrypt = "0.11.0"
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"